--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "sass": "^1.34.0",
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^4.7.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
