--- a/package.json
+++ b/package.json
@@ -1,32 +1,24 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
+  "name": "z1m1-tracker",
+  "version": "0.5.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --single --no-clear",
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
     "client": "rollup -c -w",
     "server": "(cd src/server && npm run start)",
-    "dev2": "concurrently \"npm run server\" \"npm run client\" "
+    "cdev": "concurrently \"npm run server\" \"npm run dev\" "
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.18",
+    "@sveltejs/kit": "next",
+    "sass": "^1.35.1",
+    "svelte": "^3.34.0",
     "concurrently": "^6.2.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sass": "^1.34.0",
-    "svelte": "^3.0.0",
     "svelte-preprocess": "^4.7.3"
   },
+  "type": "module",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "async-lz-string": "^1.0.3",
-    "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.6.0"
+    "@fortawesome/fontawesome-free": "^5.15.3"
   }
 }
