--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "coop-server.js",
+  "type": "module",
   "scripts": {
     "start": "node coop-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
