--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
+    "debug": "node --inspect ./node_modules/@sveltejs/kit/svelte-kit.js dev",
     "client": "rollup -c -w",
     "server": "(cd src/server && npm run start)",
     "cdev": "concurrently \"npm run server\" \"npm run dev\" "
   },
   "devDependencies": {
-    "@sveltejs/adapter-netlify": "^1.0.0-next.64",
+    "@sveltejs/adapter-auto": "^1.0.0-next.53",
     "@sveltejs/kit": "next",
+    "autoprefixer": "^10.4.7",
     "concurrently": "^6.2.0",
+    "postcss": "^8.4.14",
     "sass": "^1.35.1",
     "svelte": "^3.34.0",
-    "svelte-preprocess": "^4.7.3"
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.1.4"
   },
   "type": "module",
   "dependencies": {
