--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cdev": "concurrently \"npm run server\" \"npm run dev\" "
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0-next.53",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.65",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.7",
     "concurrently": "^6.2.0",
