coop server: Configure port and paths via environment and process args. Use setSecureContext() and filesystem watch to automatically update the certificate context when it's renewed.  I'm unsure whether this will be properly picked up by the wss:// server.
Improve logging statements.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,5 +5,5 @@
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte", "src/server/comm-manager.mjs"]
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte", "src/server/comm-manager.mjs", "src/server/config.mjs"]
 }
