--- a/src/server/package.json
+++ b/src/server/package.json
@@ -5,13 +5,14 @@
   "main": "coop-server.js",
   "type": "module",
   "scripts": {
-    "start": "node coop-server.js",
+    "start-nossl": "node coop-server.js",
+    "start": "node coop-wss-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "uuid": "^8.3.2",
-    "ws": "^7.5.1"
+    "dotenv": "^16.0.3",
+    "ws": "^8.12.0"
   }
 }
